--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10506,21 +10506,29 @@ div[class*="col"]:nth-of-type(4n + 4) .choose-item::after {
 }
 
 
-.navbar-collapse{
+.navbar-collapse {
   flex-grow: 0;
   margin-left: auto;
 }
 
-.navbar{
+.navbar {
   width: 100%;
 }
 
-.breadcrumb-img{
+.breadcrumb-img {
   background-image: url(https://asiankarateclub.com/assets/images/karate-gallery/9.jpg) !important;
 }
-.home-bg-1{
+
+.home-bg-1 {
   background-image: url(https://asiankarateclub.com/assets/images/new/ALN_9209-min.jpg) !important;
 }
-.home-bg-2{
+
+.home-bg-2 {
   background-image: url(https://asiankarateclub.com/assets/images/karate-gallery/8.jpg) !important;
+}
+
+.form__loading {
+  display: block;
+  position: relative;
+  width: 20%;
 }
